# moduga-jakga

./: .gitignore  CHANGELOG.md  CLAUDE.md  agent.md  docker-compose.yml  render.yaml
.claude/: settings.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: accessibility_agent.py  base.py  design_agent.py  editing_agent.py  orchestrator.py  publishing_agent.py  quality_agent.py  user_advocate_agent.py  writing_agent.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  books.py  chapters.py  design.py  editing.py  publishing.py  router.py  stt.py  tts.py  writing.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/models/: base.py  book.py  chapter.py  export.py  user.py
backend/app/schemas/: auth.py  base.py  book.py  chapter.py  design.py  editing.py  publishing.py  stt.py  tts.py  writing.py
backend/app/services/: design_service.py  editing_service.py  publishing_service.py  spelling_service.py  stt_service.py  supabase_service.py  tts_service.py  writing_service.py
backend/tests/: conftest.py  test_auth.py  test_books.py  test_chapters.py  test_core.py  test_design.py  test_editing.py  test_publishing.py  test_schemas.py  test_security_headers.py  test_services_unit.py  test_stt.py  test_tts.py  test_writing.py
docs/: .pdca-status.json
docx/: generate_a0_report.py
frontend/: .env.local.example  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
(+159 files in other folders)
